fixed layout shifting

--- a/src/index.css
+++ b/src/index.css
@@ -21,11 +21,11 @@ body {
   color: #102a43;
 }
 
-
 .auto-type {
   display: inline-block;
-  height: 1.2em; /* Adjust the height as needed */
+  height: 200px; /* Adjust the height as needed */
 }
+
 /* Loading animation */
 .loading {
   display: flex;
